@@ -1,4 +1,4 @@
-.TH PCRE2API 3 "13 November 2015" "PCRE2 10.21"
+.TH PCRE2API 3 "14 November 2015" "PCRE2 10.21"
 .SH NAME
 PCRE2 - Perl-compatible regular expressions (revised API)
 .sp
@@ -1644,6 +1644,11 @@ value 255 or above". If such a table was constructed, a pointer to it is
 returned. Otherwise NULL is returned. The third argument should point to an
 \fBconst uint8_t *\fP variable.
 .sp
+  PCRE2_INFO_HASBACKSLASHC
+.sp
+Return 1 if the pattern contains any instances of \eC, otherwise 0. The third
+argument should point to an \fBuint32_t\fP variable.
+.sp
   PCRE2_INFO_HASCRORLF
 .sp
 Return 1 if the pattern contains any explicit matches for CR or LF characters,
@@ -3092,6 +3097,6 @@ Cambridge, England.
 .rs
 .sp
 .nf
-Last updated: 13 November 2015
+Last updated: 14 November 2015
 Copyright (c) 1997-2015 University of Cambridge.
 .fi
